RESOLVED FIXED59905
Fix member variable order of ContextMenuItem
https://bugs.webkit.org/show_bug.cgi?id=59905
Summary Fix member variable order of ContextMenuItem
Patrick R. Gansterer
Reported 2011-05-01 17:55:13 PDT
Fix member variable order of ContextMenuItem
Attachments
Patch (1.38 KB, patch)
2011-05-01 17:57 PDT, Patrick R. Gansterer
no flags
Patrick R. Gansterer
Comment 1 2011-05-01 17:57:02 PDT
Eric Seidel (no email)
Comment 2 2011-05-11 20:34:45 PDT
Comment on attachment 91864 [details] Patch This is true for all platforms?
Patrick R. Gansterer
Comment 3 2011-05-12 00:13:58 PDT
(In reply to comment #2) > (From update of attachment 91864 [details]) > This is true for all platforms? AFAIKS Yes, because this member variables are only used in ContextMenuItem.cpp. I don't see a platform file using this variables.
Hajime Morrita
Comment 4 2011-05-15 21:55:46 PDT
Comment on attachment 91864 [details] Patch Looks no harm to land. All bots are green.
WebKit Review Bot
Comment 5 2011-05-16 01:25:11 PDT
Comment on attachment 91864 [details] Patch Rejecting attachment 91864 [details] from review queue. morrita@google.com does not have reviewer permissions according to http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/committers.py. - If you do not have reviewer rights please read http://webkit.org/coding/contributing.html for instructions on how to use bugzilla flags. - If you have reviewer rights please correct the error in Tools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your reviewer rights.
WebKit Review Bot
Comment 6 2011-07-10 09:33:07 PDT
Comment on attachment 91864 [details] Patch Clearing flags on attachment: 91864 Committed r90692: <http://trac.webkit.org/changeset/90692>
WebKit Review Bot
Comment 7 2011-07-10 09:33:11 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.