Reviewed by Adam Barth.

Fix member variable order of ContextMenuItem
https://bugs.webkit.org/show_bug.cgi?id=59905

Use the same order at decleration and assignment to silence compiler warning.

* platform/ContextMenuItem.h:


Canonical link: https://commits.webkit.org/79957@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90692 268f45cc-cd09-0410-ab3c-d52691b4dbfc